# tlg-rag-bot

./: .env.example  .gitignore  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  nginx.conf
backend/: Cargo.toml  Dockerfile
backend/src/: app.rs  config.rs  main.rs  state.rs
backend/src/models/: kb.rs
backend/src/routes/: debug.rs  health.rs  kb.rs  mod.rs  telegram.rs  telegram_webhook.rs
backend/src/services/: chroma.rs  embed.rs  kb_ingest.rs  llm.rs  mod.rs  ocr.rs  rag.rs
docs/: overview.md
frontend/: package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: bot.ts  client.ts
frontend/src/router/: index.ts
frontend/src/views/: ChunkListView.vue  DashboardView.vue  DebugView.vue  KnowledgeBaseView.vue
scripts/: README.md  build-backend.sh  build-docker.sh  build-frontend.sh  deploy.sh  dev.sh  package.sh
